--- a/travel.css
+++ b/travel.css
@@ -1,7 +1,7 @@
 html,body{
   font-family:Verdana,sans-serif;
   font-size:15px;
-  line-height:1.5
+  line-height:1.5;
 }
 html{
   overflow-x:hidden
@@ -33,43 +33,134 @@ a{
   color:inherit
 }
 
+.button{
+  border:none;
+  display:inline-block;
+  padding:8px 16px;
+  vertical-align:middle
+  ;overflow:hidden;
+  text-decoration:none;
+  color:inherit;
+  background-color:inherit;
+  text-align:center;
+  cursor:pointer;
+  white-space:nowrap
+}
 
-.button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap}
-.button:disabled{cursor:not-allowed;opacity:0.3}
+.button:disabled{
+  cursor:not-allowed;
+  opacity:0.3
+}
 
-.ul{list-style-type:none;padding:0;margin:0}
-.ul li{padding:8px 16px;border-bottom:1px solid #ddd}
-.ul li:last-child{border-bottom:none}
+.ul{
+  list-style-type:none;
+  padding:0;
+  margin:0;
+}
+.ul li{
+  padding:8px 16px;
+  border-bottom:1px solid #ddd
+}
+.ul li:last-child{
+  border-bottom:none
+}
 
-.input{padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:100%}
+.input{
+  padding:8px;
+  display:block;
+  border:none;
+  border-bottom:1px solid #ccc;
+  width:100%
+}
 
-.sidebar{height:100%;width:200px;background-color:#fff;position:fixed!important;z-index:1;overflow:auto}
+.sidebar{
+  height:100%;
+  width:200px;
+  background-color:#fff;
+  position:fixed!important;z-index:1;overflow:auto}
 .bar-block .block {width:100%}
-.bar-block .bar-block {min-width:100%}
-.bar-block .button.bar-block .button{width:100%;text-align:left;padding:8px 16px}
+.bar-block .bar-block {
+  min-width:100%
+}
+.bar-block .button.bar-block .button{
+  width:100%;
+  text-align:left;
+  padding:8px 16px
+}
 
-.main,#main{transition:margin-left .4s}
+.main,#main{
+  transition:margin-left .4s
+}
 
-.modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
-.modal-content{margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:600px}
+.modal{
+  z-index:3;
+  display:none;
+  padding-top:100px;
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  overflow:auto;
+  background-color:rgb(0,0,0);
+  background-color:rgba(0,0,0,0.4);
+}
+.modal-content{
+  margin:auto;
+  background-color:#fff;
+  position:relative;
+  padding:0;
+  outline:0;
+  width:600px}
 
-.bar{width:100%;overflow:hidden}
-.center .bar{display:inline-block;width:auto}
-.bar .bar-item{padding:8px 16px;float:left;width:auto;border:none;display:block;outline:0}
+.bar{
+  width:100%;
+  overflow:hidden;
+}
+.center .bar{
+  display:inline-block;
+  width:auto;
+}
+.bar .bar-item{
+  padding:8px 16px;
+  float:left;
+  width:auto;
+  border:none;
+  display:block;
+  outline:0;
+}
 .bar .dropdown-hover.bar .dropdown-click{position:static;float:left}
 .bar .button{white-space:normal}
-.bar-block .bar-item{width:100%;display:block;padding:8px 16px;text-align:left;border:none;white-space:normal;float:none;outline:0}
-.bar-block.center .bar-item{text-align:center}
-.block{display:block;width:100%}
+.bar-block .bar-item{
+  width:100%;
+  display:block;
+  padding:8px 16px;
+  text-align:left;
+  border:none;
+  white-space:normal;
+  float:none;
+  outline:0}
+.bar-block .center .bar-item{
+  text-align:center
+}
+.block{
+  display:block;
+  width:100%
+}
 
-.responsive{display:block;overflow-x:auto}
+.responsive{
+  display:block;
+  overflow-x:auto
+}
 
-.container:after,.container:before,.w3-panel:after,.w3-panel:before,.row:after,.row:before,.row-padding:after,.row-padding:before,.cell-row:before,.cell-row:after,.clear:after,.clear:before,.bar:before,.bar:after{content:"";display:table;clear:both}
+.container:after,.container:before,.panel:after,.panel:before,.row:after,.row:before,.row-padding:after,.row-padding:before,.cell-row:before,.cell-row:after,.clear:after,.clear:before,.bar:before,.bar:after{content:"";display:table;clear:both}
 .col,.half,.third,.twothird,.threequarter,.quarter{float:left;width:100%}
 
 
 @media (min-width:601px){.w3-col.m1{width:8.33333%}
-.third{width:33.33333%}
+.third{width:33.33333%;
+box-sizing:border-box;
+}
 @media (min-width:993px){.w3-col.l1{width:8.33333%}
 .content{max-width:980px;margin:auto}
 @media (max-width:600px){.w3-modal-content{margin:0 10px;width:auto!important}
@@ -85,6 +176,8 @@ a{
 .sidebar.collapse{display:block!important}}
 @media (max-width:992px) and (min-width:601px){.hide-medium{display:none!important}}
 @media (max-width:992px){.sidebar.collapse{display:none} .main{margin left:0!important;margin-right:0!important}}
+
+
 .top,.bottom{position:fixed;width:100%;z-index:1}
 .top{top:0}
 .bottom{bottom:0}
@@ -117,12 +210,15 @@ a{
 
 
 .left-align{text-align:left}
-.right-align{text-align:right}
-.justify{text-align:justify}
 .center{text-align:center}
 
-.border{border:1px solid #ccc}
-.border-top{border-top:1px solid #ccc}
+
+.border{
+  border:1px solid #ccc
+  }
+.border-top{
+  border-top:1px solid #ccc
+}
 
 .section,.w3-code{margin-top:16px;margin-bottom:16px}
 .margin{margin:16px}
